--- a/index.html
+++ b/index.html
@@ -4,11 +4,241 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hot Gadget</title>
+    <script src="https://kit.fontawesome.com/e97bcaa5e2.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>Hello Bootstrap</h1>
+    <div class="container bg-logo">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo.png" alt="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#product">Product</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#about-us">About Us</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#contact-us">Contact Us</a>
+                </li>
+              </ul>
+            </div>
+
+          </nav>
+    </div>
+
+<div class="container bg-margin">
+    <div id="carouselExampleIndicators" class="carousel slide slider-bg" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="row d-flex align-items-center">
+                    <div class="col-md-7">
+                        <h1>Mackbook Pro</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est quos consequuntur dolorum, officia incidunt eaque, nulla repudiandae asperiores</p>
+                        <button class="buy-button-link">BUY NOW -> </button>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="row d-flex align-items-center">
+                    <div class="col-md-7">
+                        <h1>Mi Pro Speaker</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est quos consequuntur dolorum, officia incidunt eaque, nulla repudiandae asperiores</p>
+                        <button class="buy-button-link">BUY NOW -> </button>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="images/banner-products/slider-1.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="row align-items-center">
+                    <div class="col-md-7">
+                        <h1>HP Pro Speaker</h1>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est quos consequuntur dolorum, officia incidunt eaque, nulla repudiandae asperiores</p>
+                        <button class="buy-button-link">BUY NOW -> </button>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="images/banner-products/slider-3.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+
+<div class="container bg-margin" id="product">
+    <div class="d-flex justify-content-between product">
+        <h4>Smartphone</h4>
+        <h5>See All</h5>
+    </div>
+    <div class="card-deck d-flex justify-content-center">
+        <div class="card text-center">
+          <img src="images/phone/phone-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Samsung Galaxy Note10+</h5>
+            <p class="card-text">This is a longer card with supporting text below</p>
+            <h5>$999</h5>
+            <button class="buy-button-link">BUY NOW -> </button>
+          </div>
+        </div>
+        <div class="card text-center">
+          <img src="images/phone/phone-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Iphone 11pro</h5>
+            <p class="card-text">This is a longer card with supporting text below</p>
+            <h5>$799</h5>
+            <button class="buy-button-link">BUY NOW -> </button>
+          </div>
+        </div>
+        <div class="card text-center">
+          <img src="images/phone/phone-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Xiami Redmi 7pro</h5>
+            <p class="card-text">This is a longer card with supporting text below</p>
+            <h5>$299</h5>
+            <button class="buy-button-link">BUY NOW -> </button>
+          </div>
+        </div>
+      </div>
+</div>
+
+
+<div class="container bg-margin" id="product">
+    <div class="d-flex justify-content-between product">
+        <h4>Laptop</h4>
+        <h5>See All</h5>
+    </div>
+    <div class="card-deck d-flex justify-content-center">
+        <div class="card text-center">
+          <img src="images/laptop/product-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Asus VivoBook</h5>
+            <p class="card-text">This is a longer card with supporting text below</p>
+            <h5>$999</h5>
+            <button class="buy-button-link">BUY NOW -> </button>
+          </div>
+        </div>
+        <div class="card text-center">
+          <img src="images/laptop/product-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Razer Blade 15</h5>
+            <p class="card-text">This is a longer card with supporting text below</p>
+            <h5>$2799</h5>
+            <button class="buy-button-link">BUY NOW -> </button>
+          </div>
+        </div>
+        <div class="card text-center">
+          <img src="images/laptop/product-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Xiami Mi Notebook Pro</h5>
+            <p class="card-text">This is a longer card with supporting text below</p>
+            <h5>$999</h5>
+            <button class="buy-button-link">BUY NOW -> </button>
+          </div>
+        </div>
+      </div>
+</div>
+
+<div class="container bg-margin">
+  <h2 class="text-center bg-margin">Categories</h2>
+  <div class="row text-center d-flex align-items-center">
+      <div class="col-md-3">
+        <div class="single-categorey">
+          <img src="images/Categories/bag.png" alt="">
+          <h5>Bag</h5>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="single-categorey sg-margin">
+          <img src="images/Categories/perfume.png" alt="">
+          <h5>Beauty</h5>
+        </div>
+        <div class="single-categorey">
+          <img src="images/Categories/shoe.png" alt="">
+          <h5>Shoes</h5>
+        </div>
+      </div>
+    <div class="col-md-6">
+      <div class="order-bg">
+        <img src="images/Categories/pale-order.png" alt="">
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="container block-form-bg bg-margin" id="contact-us">
+  <div class="row">
+    <div class="col-md-6 offset-md-3 text-center">
+      <div class="form-block text-center">
+        <h3>Get in Touch</h3>
+        <p>We are available 24/7 by fax, e-mail or by phone. You can also use our quick
+          contact form to ask a question about our services that we regularly provide.</p>
+      </div>
+      <form action="">
+        <input type="text" placeholder="Your name">
+        <input type="email" placeholder="Email">
+        <input type="text" placeholder="Phone Number">
+        <textarea name="" id="">Message</textarea>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
+</div>
+
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="footer-logo text-center">
+          <a href="index.html"><img src="images/logo.png" alt=""></a>
+          <h1>Stay Connected</h1>
+          <h5>Email: rshihab31@gmail</h5>
+        </div>
+        <div class="social-icon text-center">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+         
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
+
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
