Done succesfully hot gadget ecommerce website

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             </div>
             <div class="carousel-item">
                 <div class="row d-flex align-items-center">
-                    <div class="col-md-7">
+                    <div class="col-md-7 col-sm-12">
                         <h1>Mi Pro Speaker</h1>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est quos consequuntur dolorum, officia incidunt eaque, nulla repudiandae asperiores</p>
                         <button class="buy-button-link">BUY NOW -> </button>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-md-5 col-sm-12">
                         <img src="images/banner-products/slider-1.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
@@ -170,7 +170,7 @@
 </div>
 
 <div class="container bg-margin">
-  <h2 class="text-center bg-margin">Categories</h2>
+  <h2 class="text-center bg-margin">Categories <hr></h2>
   <div class="row text-center d-flex align-items-center">
       <div class="col-md-3">
         <div class="single-categorey">
